--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "antd": "^3.10.8",
+    "firebase": "^5.5.9",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
